LCAM-1270: Migrated trigger hearing result in prosecution concluded